<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TAUT</string>

    <string name="common_loading">loading&#8230;</string>
    <string name="common_no_login">Visitor</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">OK</string>
    <string name="common_done">Done</string>
    <string name="common_balance" formatted="false"><Data><![CDATA[<font color="#d5b060">%s</font> TAUT]]> </Data></string>
    <string name="common_fee">%sTAUT</string>
    <string name="common_refresh_failed">Refresh Failed</string>

    <string name="splash_title">TAUT</string>
    <string name="splash_subheading">Mobile &#038; Decentral\nProof of Transaction</string>
    <string name="splash_describe">Being a blockchain miner\nunder daily 2Mb data consumption</string>

    <string name="main_home">Home</string>
    <string name="main_send_receive">Send &#38; Receive</string>
    <string name="main_manage">Manage</string>
    <string name="main_home_title">TAUT</string>
    <string name="main_exit">Click again to exit the application!</string>
    <string name="main_referral_link">Referral link</string>
    <string name="main_referral_link_failed">Connection error, scroll down to refresh</string>
    <string name="main_referral_link_copied">Referral link copied</string>
    <string name="main_referral_tip">Please check out Proof of Transaction coin, TAUT.</string>
    <string name="main_invited_friends" formatted="false"><Data><![CDATA[invited <font color="#d5b060">%d</font> friends]]></Data></string>
    <string name="main_your_referral" formatted="false"><Data><![CDATA[<font color="#a9a9a9">Upon successful invitation, you will receive:</font><br/><font color="#d5b060">%d</font> TAUT/person]]></Data></string>
    <string name="main_friend_referral" formatted="false"><Data><![CDATA[<font color="#a9a9a9">Your friend will receive:</font><br/><font color="#d5b060">%d</font> TAUT/person]]></Data></string>
    <string name="main_p2p_exchange">P2P &#38; Non&#045;KYC Exchange</string>

    <string name="tx_send">Send</string>
    <string name="tx_receive">Receive</string>
    <string name="tx_log">Transaction log</string>
    <string name="tx_log_empty">No records</string>
    <string name="tx_to_address">To Address</string>
    <string name="tx_from_address">From Address</string>
    <string name="tx_transaction_id">Transaction ID</string>
    <string name="tx_transaction_fee">Transaction Fee</string>
    <string name="tx_log_tips">
        &#160;Red font indicates a failed transaction,\n
        Blue font indicates a pending transaction,\n
        Black font indicates a successful transaction;\n
        \'+\' represents income,\n
        \'-\' represents payout
    </string>
    <string name="tx_address_copy">Address copied</string>
    <string name="tx_id_copy">Transaction ID copied</string>

    <string name="manager_version">version %s</string>
    <string name="manager_keys">Keys</string>
    <string name="manager_address_note">Address Note</string>
    <string name="manager_help">Help</string>

    <string name="send_receiver_address">Receiver\'s Address</string>
    <string name="send_amount">Amount</string>
    <string name="send_memo">Memo</string>
    <string name="send_priority">priority</string>
    <string name="send_normal">normal</string>
    <string name="send_customize">customize</string>
    <string name="send_choose_fee_title">Choose Transaction Fee</string>
    <string name="send_choose_fee_tips">The higher transaction fee,the faster transaction speed</string>
    <string name="send_priority_vice">(≈0.05 TAUT)</string>
    <string name="send_normal_vice">(≈0.01 TAUT)</string>
    <string name="send_priority_value">0.05</string>
    <string name="send_normal_value">1</string>
    <string name="send_to">To</string>
    <string name="send_dialog_yes">Proceed</string>
    <string name="send_dialog_no">Back</string>
    <string name="send_has_pending">Please wait for previous transaction to be confirmed</string>
    <string name="send_tx_success">Transaction sent</string>
    <string name="send_tx_fail">Transaction Error</string>
    <string name="send_tx_fail_in_pool">Transaction not existing in the memory pool</string>
    <string name="send_tx_network_error">Network error, send failed</string>
    <string name="send_tx_invalid_address">Invalid Address</string>
    <string name="send_tx_invalid_amount">Invalid Amount</string>
    <string name="send_tx_invalid_fee">Invalid Transaction Fee</string>
    <string name="send_tx_invalid_error">UTXO mismatch. </string>
    <string name="send_tx_address">Receiver&#160;Address:&#160;%s</string>
    <string name="send_tx_range_fee">%s×%s%s(range&#058;&#160;1&#8211;9.9)</string>
    <string name="send_tx_fee">%s&#160;taut</string>

    <string name="keys_dialog_title">Please make sure your\nprivate key has been saved</string>
    <string name="keys_address">Address</string>
    <string name="keys_public_key">Public Key</string>
    <string name="keys_private_key">Private Key</string>
    <string name="keys_import_key">Import New Key</string>
    <string name="keys_import">Import</string>
    <string name="keys_generate">Generate New Private Key</string>
    <string name="keys_how_import">How to import my private key?</string>
    <string name="keys_paste_tip">Paste private key here</string>
    <string name="keys_address_copy">Address copied</string>
    <string name="keys_public_copy">Public Key copied</string>
    <string name="keys_private_copy">Private Key copied</string>
    <string name="keys_private_invalid">Invalid private key</string>

    <string name="profile_avatar">Avatar</string>
    <string name="profile_name">Name</string>
    <string name="profile_title">Profile</string>
    <string name="profile_select_photo">Choose from Album</string>
    <string name="profile_take_photo">Take Photo</string>
    <string name="profile_dialog_name">Please enter the name</string>


    <!--version upgrade-->
    <string name="app_upgrade_progress">Updating progress&#8230;</string>
    <string name="app_upgrade_title">Update Log</string>
    <string name="app_upgrade_install">Install</string>
    <string name="app_upgrade_fail">Failed</string>
    <string name="app_upgrade_retry">Retry</string>
    <string name="app_upgrade_latest">latest version</string>

    <!--permission tip-->
    <string name="permission_tip_upgrade_denied">
        Please enable storage rights for TAUT, it is disabled.
    </string>

    <string name="permission_tip_upgrade_never_ask_again">
        Please enable storage rights for TAUT, it is forbidden now.
    </string>

    <string name="permission_tip_capture_denied">
        "TAUT" would like to access the camera and storage.
    </string>

    <string name="permission_tip_capture_never_ask_again">
        "TAUT" would like to access the camera and storage.
    </string>

    <string name="permission_tip_gallery_denied">
        "TAUT" would like to access the storage.
    </string>

    <string name="permission_tip_gallery_never_ask_again">
        "TAUT" would like to access the storage.
    </string>
    <string name="permission_install_unknown_apk_note">
        Please allow the installation of TAUT application permissions.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_transaction">TAUT wallet first transaction you\'re tautcoin easly transfer tautcoin you\'re wallet to other taut wallet.</string>
    <string name="send_receive">Using TAUT wallet your easily send and receive tautcoin and hold andstore you\'re tautcoin safely.</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

</resources>