<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/color_main_bg"
    android:orientation="vertical">

    <io.taucoin.android.wallet.widget.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftBackImage="@mipmap/icon_back_back"
        app:titleBackground="@color/color_tool_bar_child"
        app:titleText="@string/tx_send" />

    <EditText
        android:id="@+id/et_address"
        style="@style/style_normal_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/send_receiver_address"
        android:text="TPUR3cL7Tp5ZbEE9EFkkuM9jgHqPncV87R"
        android:textColorHint="@color/color_grey" />

    <EditText
        android:id="@+id/et_amount"
        style="@style/style_normal_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/send_amount"
        android:inputType="numberDecimal|number"
        android:singleLine="true"
        android:textColorHint="@color/color_grey" />

    <EditText
        android:id="@+id/et_memo"
        style="@style/style_normal_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/send_memo"
        android:textColorHint="@color/color_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp">

        <TextView
            android:id="@+id/tv_fee_title"
            style="@style/style_normal_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tx_transaction_fee" />

        <TextView
            android:layout_toEndOf="@+id/tv_fee_title"
            android:id="@+id/tv_fee"
            style="@style/style_normal_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_size_15"
            android:minWidth="@dimen/dimen_size_150"
            android:gravity="right"
            android:drawableEnd="@mipmap/icon_arrow"
            android:text="@string/send_normal_value"
            android:drawablePadding="2dp" />


    </RelativeLayout>

    <EditText
        android:visibility="visible"
        android:id="@+id/et_fee"
        style="@style/style_normal_blue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:inputType="number|numberDecimal"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/send_normal_value"
        android:drawablePadding="2dp" />

    <Button
        android:id="@+id/btn_send"
        style="@style/style_big_white"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_send_tau"
        android:text="@string/tx_send"
        android:textAllCaps="false" />

</LinearLayout>