<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical">

    <io.taucoin.android.wallet.widget.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/main_manage" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_header_pic"
            android:layout_width="@dimen/dimen_size_50"
            android:layout_height="@dimen/dimen_size_50"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_size_32"
            android:src="@mipmap/icon_avatar"
            app:civ_border_color="@color/color_main_line"
            app:civ_border_width="0.6dp" />

        <TextView
            android:id="@+id/tv_nick"
            style="@style/style_normal_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_header_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/color_grey"
            android:hint="@string/common_no_login" />

        <TextView
            android:id="@+id/tv_version"
            style="@style/style_middle_grey"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_below="@id/tv_nick"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/shape_corner_white_border"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@color/color_main_line"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_height="wrap_content">

        <io.taucoin.android.wallet.widget.ItemLineView
            android:id="@+id/item_keys"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:leftImage="@mipmap/icon_key"
            app:rightText="@string/manager_keys"
            app:rightTextColor="@color/color_yellow" />

        <io.taucoin.android.wallet.widget.ItemLineView
            android:visibility="gone"
            android:id="@+id/item_address_note"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            app:leftImage="@mipmap/logo"
            app:rightText="@string/manager_address_note"
            app:rightTextColor="@color/color_black" />

        <io.taucoin.android.wallet.widget.ItemLineView
            android:id="@+id/item_help"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            app:leftImage="@mipmap/icon_help"
            app:rightText="@string/manager_help"
            app:rightTextColor="@color/color_black" />

    </LinearLayout>
</LinearLayout>