<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_grey"
    android:orientation="vertical">

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_title"
        style="@style/style_big_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/color_select"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/send_choose_fee_title" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_tips"
        style="@style/style_middle_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_select"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:text="@string/send_choose_fee_tips" />

    <ScrollView
        android:id="@+id/sLayout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none">

        <LinearLayout
            android:id="@+id/lLayout_content"
            android:background="@color/color_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/style_normal_black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_select"
        android:gravity="center"
        android:text="@string/send_customize"
        android:visibility="gone" />

</LinearLayout>