<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/style_normal_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to" />

        <TextView
            android:id="@+id/tv_to_address"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/style_normal_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_amount" />

        <TextView
            android:id="@+id/tv_to_amount"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/style_normal_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_memo" />

        <TextView
            android:id="@+id/tv_to_Memo"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</LinearLayout>
